Atualizei o Roda Pé

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <li><a class="Texto" href="#">Local</a></li>
             </ul>
     </menu>
+
+    <footer>
+       <h1 class="Roda-Pé">
+        Todos os Direito Reservados
+       </h1>
+    </footer>
    <script>
     function clickMenu() {
             if(itens.style.display == 'block') {
