Adicionei roda pe

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>	
 		<div class="menu">	
-			<div class="Barra-nome-logo"><span id="botão-Menu" class="material-symbols-outlined" onclick="clickMenu()">menu </span><a class="Nome-e-Menu" href="#"> <h3 class="espaço"><span class="Branco"> Delicada</span> <span class="Rosa"> Menina</span></h3> </a></div>       
+			<div class="Barra-nome-logo"><span id="botão-Menu" class="material-symbols-outlined" onclick="clickMenu()">menu </span><a class="Nome-e-Menu" href="#"> <h3 class="espaço"><span class="Rosa"> Delicada</span> <span class="Branco"> Menina</span></h3> </a></div>       
 			<div class="Barra-central"><input id="sem-borda-e-cor-de-fundo-input" type="text" placeholder="Pesquisa..."></div><!--Barra central do site-->
                 <div id="botão-ficar-lado-a-lado">
                     <a class="Entrada-login-cadastro" href="#">Login</a><!--Barra de login -->	
@@ -30,11 +30,15 @@
                 <li><a class="Texto" href="#">Local</a></li>
             </ul>
     </menu>
-
+    
     <footer>
-       <h1 class="Roda-Pé">
-        Todos os Direito Reservados
-       </h1>
+        <div class="Roda-Pé">
+            <div class="Fixar-Roda-pé">
+                <h1>
+                    Todos os direito reservados
+                </h1>
+            </div>
+        </div>    
     </footer>
    <script>
     function clickMenu() {
