--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <hr id="linha-trasparente">
 
     <menu class="Are-Lateral" id="itens">
+    <span id="botão-Menu" class="material-symbols-outlined">menu</span> 
             <ul>
                 <li><a class="Texto" href="#">Menu</a></li>
                 <li><a class="Texto" href="#">Skills</a></li>
@@ -40,6 +41,11 @@
             </div>
         </div>    
     </footer>
+   
+   
+   
+   
+   
    <script>
     function clickMenu() {
             if(itens.style.display == 'block') {
