--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <header>	
 		<div class="menu">	
 			<div class="Barra-nome-logo"><span id="botão-Menu" class="material-symbols-outlined" onclick="clickMenu()">menu </span><a class="Nome-e-Menu" href="#"> <h3 class="espaço"><span class="Rosa"> Delicada</span> <span class="Branco"> Menina</span></h3> </a></div>       
-			<div class="Barra-central"><input id="sem-borda-e-cor-de-fundo-input" type="text" placeholder="Pesquisa..."></div><!--Barra central do site-->
+			<!--<div class="Barra-central"><input id="sem-borda-e-cor-de-fundo-input" type="text" placeholder="Pesquisa..."></div>Barra central do site-->
                 <div id="botão-ficar-lado-a-lado">
-                    <a class="Entrada-login-cadastro" href="#">Login</a><!--Barra de login -->	
-                    <a class="Entrada-login-cadastro" href="#">Cadastro</a><!--Barra de cadastro-->
+                    <!--<a class="Entrada-login-cadastro" href="#">Login</a>Barra de login -->	
+                    <!--<a class="Entrada-login-cadastro" href="#">Cadastro</a>Barra de cadastro-->
 		        </div>
 	    </div>
     </header>
     <hr id="linha-trasparente">
 
     <menu class="Are-Lateral" id="itens">
-    <span id="botão-Menu" class="material-symbols-outlined">menu</span> 
-            <ul>
-                <li><a class="Texto" href="#">Menu</a></li>
-                <li><a class="Texto" href="#">Skills</a></li>
-                <li><a class="Texto" href="#">About</a></li>
-                <li><a class="Texto" href="#">Serviço</a></li>
-                <li><a class="Texto" href="#">Local</a></li>
+        <div id="botão" class="Barra-nome-logo"><span id="botão-Menu" class="material-symbols-outlined" onclick="clickMenu()">menu </span><a class="Nome-e-Menu" href="#"> <h3 class="espaço"><span class="Rosa"> Delicada</span> <span class="Branco"> Menina</span></h3> </a></div>     
+            <ul class="alinhamento">
+                <li><a class="Texto" href="#">Colares</a></li>
+                <li><a class="Texto" href="#">Aneis</a></li>
+                <li><a class="Texto" href="#">Joias</a></li>
+                <li><a class="Texto" href="#">Braceletes</a></li>
+                <li><a class="Texto" href="#">Brincos</a></li>
             </ul>
     </menu>
     
